# runx

./: .release-it.json  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  dev.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/: dependabot.yml  release.yml
.github/workflows/: release.yml
apps/desktop/: package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/src/: App.tsx  ThemeProvider.tsx  utils.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/value/: py_value.rs
apps/desktop/src/components/: LogRow.tsx  Output.tsx  RunXSelect.tsx
apps/desktop/src/hooks/: useWebviewWindow.ts
apps/desktop/src/pages/: RunCode.tsx  Settings.tsx
apps/web/: package.json
crates/engine/: Cargo.toml
crates/engine/src/: console.rs  engine.rs  language.rs  lib.rs  value.rs
crates/engine/src/engine/: js_engine.rs  py_engine.rs  py_engine_stub.rs
crates/engine/src/value/: js_value.rs  py_value.rs
crates/wasm_api/: Cargo.toml
crates/wasm_api/src/: lib.rs
src/: App.tsx  LogType.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: console.rs  engine.rs  language.rs  lib.rs
src-tauri/src/engine/: ts_engine.rs
src/components/: LogItem.tsx  LogRow.tsx  Output.tsx  RunXSelect.tsx  Sidebar.tsx
src/hooks/: useSettingsWebview.ts
src/pages/: RunCode.tsx
