[package]
name = "runx_engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"] # 支持编译成共享库、WASM

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quickjs-rs = {version = "0.5.2", features = ["log", "chrono", "bigint"] }
log = "0.4.27"
lazy_static = "1.5.0"
swc_common = { version = "13.0.1", features = ["tty-emitter"] }
swc_ecma_ast = "13.0.0"
swc_ecma_parser = { version = "17.1.0", features = ["verify", "typescript"] }
swc_ecma_transforms_typescript = "20.0.0"
swc_ecma_visit = "13.0.0"
swc_ecma_transforms = "22.0.0"
swc_ecma_codegen = "15.0.1"
swc_ecma_transforms_base = "18.0.0"
tokio = "1.45.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = {version = "0.25.1", features = ["auto-initialize"]}
