[package]
name = "runx"
version = "0.1.0"
description = "code runner"
authors = ["wst7"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "runx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
runx_engine = {path = "../../../crates/engine"}
# quickjs-rs = {version = "0.5.2", features = ["log", "chrono", "bigint"] }
# log = "0.4.27"
# lazy_static = "1.5.0"
# swc_common = { version = "13.0.1", features = ["tty-emitter"] }
# swc_ecma_ast = "13.0.0"
# swc_ecma_parser = { version = "17.1.0", features = ["verify", "typescript"] }
# swc_ecma_transforms_typescript = "20.0.0"
# swc_ecma_visit = "13.0.0"
# swc_ecma_transforms = "22.0.0"
# swc_ecma_codegen = "15.0.1"
# swc_ecma_transforms_base = "18.0.0"
# pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
# tokio = "1.45.1"


[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false
